Added notes about manifest-files

--- a/cheat_sheet_docker.tex
+++ b/cheat_sheet_docker.tex
@@ -43,6 +43,52 @@ conda install -c conda-forge docker-py
 	\item для \texttt{Windows}\footnote{Поддерживается даже \texttt{Windows 7}}: \url{https://docs.docker.com/toolbox/toolbox_install_windows/}; после установки \texttt{Docker Toolbox} останется только запустить \texttt{Docker Quick Start Terminal}.
 \end{itemize}
 
+\subsection{Анализ manifest-файлов Docker}
+
+Чтобы извлечь данные с удаленного репозитория нужно воспользоваться конструкцией
+\begin{lstlisting}[
+style = bash,
+numbers = none
+]
+docker pull leorfinkelberg/app_name:tag_name
+\end{lstlisting}
+или что то же самое
+\begin{lstlisting}[
+style = bash,
+numbers = none
+]
+$ docker pull registry.hub.docker.com/leorfinkelberg/app_name:tag_name
+\end{lstlisting}
+
+Для того чтобы скачать manifest-файл нашего приложения нужно в командной оболочке набрать следующее
+\begin{lstlisting}[
+style = bash,
+numbers = none
+]
+$ curl -D - -s 'https://auth.docker.io/token?service=registry.docker.io&scope=repository:leorfinkelberg/myapp:pull'
+# вернет
+HTTP/1.1 200 OK
+Content-Type: application/json
+Date: Thu, 04 Jun 2020 13:46:22 GMT
+Transfer-Encoding: chunked
+Strict-Transport-Security: max-age=31536000
+
+{"token":"eyJhbGciOiJSUzI1NiIsInR5cCI6...}
+\end{lstlisting}
+
+Здесь флаг \verb|-D| сохраняет заголовки, возвращенные сервером, \verb|-s| заставляет выводить минимум информации.
+
+Затем создаем переменную окружения \texttt{REGISTRY\_TOKEN}
+\begin{lstlisting}[
+style = bash,
+numbers = none
+]
+export REGISTRY_TOKEN="eyJhbGciOiJSUzI1NiIsInR5..."
+\end{lstlisting}
+
+А затем 
+
+
 \subsection{Контейнеры}
 
 \emph{Контейнеры} представляют собой средства инкапсуляции приложения вместе со всеми его зависимостями.
@@ -125,13 +171,72 @@ docker run test/cowsay-dockerfile /usr/games/cowsay 'Moo'
 
 \paragraph{{порт}} целое неотрицательное число, записываемое в заголовках \emph{протоколов транспортного уровня} модели OSI (TCP, UDP, SCTP, DCCP). Используется для определения процесса-получателя пакета в пределах одного хоста (локального компьютера).
 
-\section{Базовые концепции}
+\section{Базовые концепции, связанные с системой Docker}
+
+\subsection{Структура стека протоколов TCP/IP}
+
+Сегодня стек протоколов TCP/IP используется как в глобальных, так и в локальных сетях. Стек имеет иерархическую, четырхуровневую структуру (см~\tblref{tab:tcpip}).
+
+Прикладной уровень стека TCP/IP соответствует трем верхним уровням модели OSI: прикладному, представления и сеансовому \cite{olifer:compnets-2020}.
+
+\begin{table}[h]
+	\centering
+	\caption{\itshape Иерархическая структура стека протоколов TCP/IP}\label{tab:tcpip}
+	%\renewcommand{\arraystretch}{1.05}
+	\begin{tabular}{cl}
+		\rowcolor[gray]{0.96} {Прикладной уровень} & FTP, Telnet, HTTP, SMTP, SNMP, TFTP \\
+		Транспортный уровень & TCP, UDP \\
+		\rowcolor[gray]{0.96} {Сетевой уровень} & IP, ICMP, RIP, OSPF \\
+		Уровень сетевых интерфейсов & не регламентируется
+	\end{tabular}
+\end{table}
+
+Протоколы прикладного уровня развертываются на хостах.
+
+Транспортный уровень стека TCP/IP может предоставлять вышележащему уровню два типа сервиса:
+
+\begin{itemize}
+	\item гарантированную доставку обеспечивает \emph{протокол управления передачей} (Transmission Control Protocol, TCP),
+	
+	\item доставку по возможности, или с максимальными усилиями, обеспечивает \emph{протокол пользовательских дейтаграмм} (User Datagram Protocol, UDP).
+\end{itemize}
+
+Чтобы обеспечить надежную доставку данных, протокол TCP предусматривает установление \emph{логического соединения}. Это позволяет нумеровать пакеты, подтверждать их прием квитанциями, организовать в случае потери повторные передачи, распознавать и уничтожать дубликаты, доставлять прикладному уровню пакеты в том порядке, в котором они были отправлены. Благодаря этому протоколу объекты на \emph{хосте-отправителе} и \emph{хосте-получателе} могут поддерживать обмен данными в дуплексном режиме. TCP дает возможность без ошибок доставить сформированный на одном из компьютеров поток байтов на любой другой компьютер, входящий в составную сеть.
+
+Протокол UDP является простейшим \emph{дейтаграммным} протоколом, используемым, если задача надежного обмена данными либо вообще не ставится, либо решается средствами более высокого уровня -- прикладным уровнем или пользовательским приложением.
+
+В функции протоколов TCP и UDP входит также исполнение роли связующего звена между прилегающими к транспортному уровню прикладным и сетевым уровням. От прикладного протокола (например, от HTTP) транспортный уровень принимает задание на передачу данных с тем или иным качеством прикладному уровню-получателю.
+
+Сетей уровень, называемый также уровнем Интернета, является стрежнем всей архитектуры TCP/IP. Протоколы сетевого уровня поддерживают интерфейс с вышележащим транспортным уровнем, получая от него запросы на передачу данных по составной сети, а также с нижележащим уровнем сетевых интерфейсов.
+
+Основным протоколом сетевого уровня является межсетевой протокол (Internet Protocol, IP). В его задачу входит продвижение пакета между сетями -- от одного маршрутизатора к другому до тех пор, пока пакет не попадет в сеть назначения. В отличие от протоколов прикладного уровня и транспортного уровней, протокол IP развертывается не только на хостах, но и на всех маршрутизаторах. Протокол IP -- это дейтаграммный протокол, работающий без установления соединения по принципу доставки с максимальными усилиями. Такой тип сетевого сервиса называют также <<ненадежным>>.
+
+\subsection{Формат IP-адреса}
+
+В заголовке IP-пакета предусмотрены поля для хранения \emph{IP-адреса отправителя} и \emph{IP-адреса получателя}. Каждое из этих полей имеет фиксированную длину 4 байта (32 бита).
+
+IP-адрес состоит из двух логических частей -- номера сети и номера узла в сети. Наиболее распространенная форма представления IP-адреса -- запись в виде четырех чисел, представляющих значения каждого байта в десятичной форме и разделенных точками, например: 128.10.2.30.
+
+Границу в IP-адресе между номером сети и номером узла в сети можно найти с помощью \emph{маски}. Маска -- это число, применяемое в паре с IP-адресом, причем двоичная запись маски содержит непрерывную последовательность единиц в тех разрядах, которые должны в IP-адресе интерпретироваться как номер сети. Граница между последовательностями единиц и нулей в маске соответствует границе между номером сети и номером узла в IP-адресе.
 
 \subsection{Виртуальный сетевой интерфейс}
 
 Все TCP/IP-реализации поддерживают loopback-механизмы, которые реализуют виртуальный сетевой интерфейс исключительно программно и не связанны с каким-либо оборудованием, но при этом полностью интегрированны во внутреннюю сетевую инфраструктуру компьютерной системы. Пожалуй самый распространенным IP-адресом в механизмах loopback является \texttt{127.0.0.1}. В IPv4 в него также отображается любой адрес из диапазона \texttt{127.0.0.0} -- \texttt{127.255.255.255}. IPv6 определяет единственные адрес для этой функции -- \texttt{0:0:0:0:0:0:0:1/128} (так же записывается как \texttt{::1/128}). Стандартное, официально зарезервированное доменное имя для этих адресов -- \texttt{localhost}.
 
 Интерфейс loopback имеет несколько путей применения. Он может быть использован сетевым клиентским программным обеспечением, чтобы общаться с серверным приложением, расположенным на том компьютере. То есть если на компьютере, на котором запущен веб-сервер, указать в веб-браузере URL \texttt{http://127.0.0.1/} или \texttt{http:/localhost/}, то он попадает на веб-сайт этого компьютера.
+
+
+
+\section{Пример создания простого web-приложения}
+
+Структура проекта
+\begin{lstlisting}[
+style = cmd,
+numbers = none
+]
+
+\end{lstlsiting}
+
 
 \section{Наиболее полезные конструкции}
 
@@ -235,6 +340,8 @@ docker rm -v $(docker ps -aq -f status=exited)
 	\bibitem{mouat:docker-2017}{ \emph{Моуэт Э.} Использование Docker. -- М.: ДМК Пресс, 2017. -- 354 с. }
 	
 	\bibitem{robbins:bash-2017}{ \emph{Роббинс А.} Bash. Карманный справочник системного администратора, 2-е изд.: Пер. с англ. -- СПб.: ООО <<Альфа-книга>>, 2017. -- 152 с.}
+	
+	\bibitem{olifer:compnets-2020}{\emph{Олифер В.}, \emph{Олифер Н.} Компьютерные сети. Принципы, технологии, протоколы. -- СПб.: Питер, 2020. -- 1008 с.}
 \end{thebibliography}
 
 %\listoffigures\addcontentsline{toc}{section}{Список иллюстраций}
