--- a/style_packages/podvoyskiy_article_extended.sty
+++ b/style_packages/podvoyskiy_article_extended.sty
@@ -73,7 +73,7 @@
 		{\Large\bfseries\@title}%
 		\end{spacing}
 		%\vskip 1.2em%
-                \vskip -8mm
+                %\vskip -5mm
 		{\normalsize
 			%\lineskip .5em%
 			\begin{tabular}[t]{l}%
